# xfce4-sample-plugin

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  meson.build
icons/: Makefile.am  meson.build
panel-plugin/: Makefile.am  Makefile.in  meson.build  sample-dialogs.c  sample-dialogs.h  sample.c  sample.desktop.in  sample.desktop.in.in  sample.h
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ko.po  lt.po  ms.po  nb.po  nl.po  oc.po  (+16 more)
